# silver-utilities

./: CMakeLists.txt  LICENSE  README.md  silver-utilities.code-workspace
silver/utilities/: program.cpp  program.h  registry.cpp  registry.h  singleton.cpp  singleton.h
tests/: test_program.cpp  test_program.h  test_registry.h  test_singleton.h
tests/program/: CMakeLists.txt  test_program.cpp  test_program.h
tests/registry/: CMakeLists.txt  test_registry.cpp
tests/singleton/: CMakeLists.txt  test_singleton.cpp  test_singleton.h
